--- a/src/ribbon/LineDropdown/LineDropdown.css
+++ b/src/ribbon/LineDropdown/LineDropdown.css
@@ -36,7 +36,7 @@
     border: 1px solid var(--kudo-dropdown-menu-border);
     border-radius: var(--kudo-item-border-radius);
 
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+
 
     padding: var(--size-4);
 
@@ -65,18 +65,15 @@
     /* Layout */
     display: flex;
     align-items: center;
-    gap: var(--size-6);
+    gap: 1px;
     width: 100%;
 
     /* Отступы */
     padding: var(--kudo-item-padding-top) var(--kudo-item-padding-right) var(--kudo-item-padding-bottom) var(--kudo-item-padding-left);
 
-    /* Скругление */
-    border-radius: var(--kudo-item-border-radius);
 
-    /* Цвета */
-    background-color: var(--kudo-ribbon-item-bg-standard);
-    color: var(--kudo-ribbon-item-text-standard);
+
+
 
     /* Интерактивность */
     cursor: pointer;
